<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layUtama"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UnusedAttribute"
    android:background="@drawable/bg_darbuka1">
    <com.google.android.gms.ads.AdView
        android:id="@+id/adview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_admob"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/imgDarbuka1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/rebana1" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="50sp"
                    android:layout_marginStart="50sp"
                    android:layout_marginRight="50sp"
                    android:layout_marginEnd="50sp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/teksRol11"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:textAlignment="center"
                        android:text="@string/slap"
                        android:textColor="#333333"
                        android:textStyle="bold"
                        android:elevation="5dp"
                        />
                    <TextView
                        android:id="@+id/teksSlap1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:textAlignment="center"
                        android:text="@string/slap"
                        android:textColor="#333333"
                        android:textStyle="bold"
                        android:elevation="5dp"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/teksRol21"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:textAlignment="center"
                        android:text="@string/tak"
                        android:textColor="#333333"
                        android:textStyle="bold"
                        android:elevation="5dp"
                        />

                    <TextView
                        android:id="@+id/teksDum1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:textAlignment="center"
                        android:text="@string/dum"
                        android:textColor="#333333"
                        android:textStyle="bold"
                        android:elevation="5dp"
                        />
                    <TextView
                        android:id="@+id/teksTak1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:textAlignment="center"
                        android:text="@string/tak"
                        android:textColor="#333333"
                        android:textStyle="bold"
                        android:elevation="5dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="50sp"
                    android:layout_marginStart="50sp"
                    android:layout_marginRight="50sp"
                    android:layout_marginEnd="50sp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/teksKa11"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:text="@string/ka"
                        android:textColor="#333333"
                        android:textStyle="bold"
                        android:elevation="5dp"
                        />
                    <TextView
                        android:id="@+id/teksKa21"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:textAlignment="center"
                        android:text="@string/ka"
                        android:textColor="#333333"
                        android:textStyle="bold"
                        android:elevation="5dp"
                        />
                </LinearLayout>
            </RelativeLayout>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/imgDarbuka2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/rebana1" />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="50sp"
                    android:layout_marginStart="50sp"
                    android:layout_marginRight="50sp"
                    android:layout_marginEnd="50sp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/teksRol12"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:textAlignment="center"
                        android:text="@string/slap"
                        android:textColor="#333333"
                        android:textStyle="bold"
                        android:elevation="5dp" />
                    <TextView
                        android:id="@+id/teksSlap2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:textAlignment="center"
                        android:text="@string/slap"
                        android:textColor="#333333"
                        android:textStyle="bold"
                        android:elevation="5dp"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/teksRol22"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:textAlignment="center"
                        android:text="@string/tak"
                        android:textColor="#333333"
                        android:textStyle="bold"
                        android:elevation="5dp"
                        />

                    <TextView
                        android:id="@+id/teksDum2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:textAlignment="center"
                        android:text="@string/dum"
                        android:textColor="#333333"
                        android:textStyle="bold"
                        android:elevation="5dp"
                        />
                    <TextView
                        android:id="@+id/teksTak2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:textAlignment="center"
                        android:text="@string/tak"
                        android:textColor="#333333"
                        android:textStyle="bold"
                        android:elevation="5dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="50sp"
                    android:layout_marginStart="50sp"
                    android:layout_marginRight="50sp"
                    android:layout_marginEnd="50sp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/teksKa12"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:text="@string/ka"
                        android:textColor="#333333"
                        android:textStyle="bold"
                        android:elevation="5dp"
                        />
                    <TextView
                        android:id="@+id/teksKa22"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:textAlignment="center"
                        android:text="@string/ka"
                        android:textColor="#333333"
                        android:textStyle="bold"
                        android:elevation="5dp"
                        />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
    <ImageView
        android:id="@+id/rebana_kecil1"
        android:layout_below="@id/adview"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_kecrek"
        android:layout_margin="20dp"/>
    <ImageView
        android:id="@+id/rebana_kecil2"
        android:layout_below="@id/adview"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_kecrek"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"/>
    <ImageView
        android:id="@+id/rebana_kecil3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_kecrek"
        android:layout_margin="20dp"/>
    <ImageView
        android:id="@+id/rebana_kecil4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_kecrek"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"/>
</RelativeLayout>
